--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -17,8 +17,8 @@ jobs:
         uses: actions/checkout@v4
       - name: Test
         run: |
-          docker-compose run --rm app sh -c "python manage.py test"
+          docker compose run --rm app sh -c "python manage.py test"
       - name: Lint
         run: |
-          docker-compose run --rm app sh -c "flake8"
+          docker compose run --rm app sh -c "flake8"
         
